These are the Release Notes for post-revision 2.4.5 of netperf:

*) The histogram code has been enhanced to track more than one latency
   at a time and so --enable-histogram and --enable-burst are now
   compatible - for the omni tests or migrated "classic" tests only
   however.  This change was inspired/instigated by Jim Gettys and his
   work on overly-large queues of buffers

*) WANT_MIGRATION is enabled when one specifies --enable-omni on the
   configure command line.

*) Massage and encorporate a patch from Google that enables randomization
   of the IP addresses used in a test.  An optional mask length in the
   standard '/' notation can be added to the end of the IP/name in the 
   test-specific -H or -L options of an Omni test.

*) Massage and include a DEBUG_LOG_FILE patch for Android from
   Josselin Costanzi

*) Add intial attempt to report Slot ID on HP-UX 11.31.

*) Add global -s option to cause omni tests to pause between
   setting-up the test and actually starting it.  pause is in seconds.
   Poor man's way to (attempt to) avoid issues when starting many,
   Many, MANY concurrent netperf tests. Based on patches from Google.

*) Additional timing statistics will be kept by the omni tests when
   the global "-j" option is specified.  The additional statistics are
   min, max, mean, stddev and the 50th, 90th and 99th percentiles on
   the timings measured by histograms. Based on patches from Google.

*) Add a workaround to get Linux to report TX queue drops in a
   UDP_STREAM test when the socket buffer size is larger than the
   TX queue.  Provided by Andrew Gallatin.

*) Fix the configure script to know it does not have to look for an 
   SCTP library on FreeBSD 8.X

*) The BSD and "omni" tests now have a test-specific -R option which
   is a boolean controlling whether or not SO_DONTROUTE will be set on
   the data socket.  By default, any unidirectional UDP test will have
   SO_DONTROUTE set unless a -R 1 option is given.  All other tests