@@ -1,5 +1,12 @@
 These are the Release Notes for post-revision 2.4.5 of netperf:
 
+*) When ./configured with --enable-intervals and intervals are
+   actually used, the round-trip latency reported by an omni (or
+   migrated classic) request/response test should better reflect
+   reality rather than the length of the pacing interval.  It and the
+   mean_latency from the histogram will still differ slightly and
+   probably always will.
+
 *) The histogram code has been enhanced to track more than one latency
    at a time and so --enable-histogram and --enable-burst are now
    compatible - for the omni tests or migrated "classic" tests only
